2008-05-22  Timothy Hatcher  <timothy@apple.com>

        <rdar://problem/5956403> Update the Develop menu to match the new Inspector items

        Reviewed by Adam Roben.

        * English.lproj/localizedStrings.js:
        * WebCore.base.exp:
        * page/InspectorController.cpp:
        (WebCore::InspectorController::InspectorController):
        (WebCore::InspectorController::inspect):
        (WebCore::InspectorController::setWindowVisible):
        (WebCore::InspectorController::showPanel):
        (WebCore::InspectorController::startUserInitiatedProfiling):
        (WebCore::InspectorController::stopUserInitiatedProfiling):
        (WebCore::InspectorController::startDebuggingAndReloadInspectedPage):
        (WebCore::InspectorController::stopDebugging):
        * page/InspectorController.h:
        (WebCore::InspectorController::):
        (WebCore::InspectorController::isRecordingUserInitiatedProfile):
        * page/inspector/ProfilesPanel.js:
        * page/inspector/ScriptsPanel.js:
        * page/inspector/inspector.js:

2008-05-22  Josh Aas  <joshmoz@gmail.com>

        Reviewed by Anders.

        <rdar://problem/5956429> 
        https://bugs.webkit.org/show_bug.cgi?id=19192
        remove NPNVpluginEventModel, fix example plugin
        
        Remove NPNVpluginEventModel enum variable.
        
        * bridge/npapi.h:

2008-05-22  Stephanie Lewis  <slewis@apple.com>

        Reviewed by Dan.

        Fix <rdar://problem/5952405>.  The unbeforeunload count cannot be cleared when it is dispatched because it is possible to be called again.  Clear it after the unload event is dispatched.

        Test: fast/events/onunload-clears-onbeforeunload.html

        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::stopLoading):
        * page/Frame.cpp:
        (WebCore::Frame::shouldClose):

2008-05-22  Simon Hausmann  <hausmann@webkit.org>

        Reviewed by Oliver.

        Qt build fix.
