@@ -1728,7 +1728,7 @@ body.inactive .data-grid th.sort-ascending, body.inactive .data-grid th.sort-des
 }
 
 #scripts-files {
-    max-width: 150px;
+    max-width: 250px;
 }
 
 #scripts-functions {
